--- a/css/style.css
+++ b/css/style.css
@@ -43,43 +43,49 @@ td {
 }
 /* Default common css end*/
 body {
-  color: #1f373d;
   font-family: "Montserrat", sans-serif;
 }
 h1 {
   font-size: 61.64px;
   font-weight: 600;
   text-transform: capitalize;
+  color: #1f373d;
 }
 h2 {
   font-size: 40px;
   font-weight: 600;
   text-transform: capitalize;
+  color: #1f373d;
 }
 h3 {
   font-size: 25px;
   font-weight: 600;
   text-transform: capitalize;
+  color: #1f373d;
 }
 h4 {
   font-size: 18px;
   font-weight: 600;
   text-transform: capitalize;
+  color: #1f373d;
 }
 h5 {
   font-size: 15px;
   font-weight: 600;
   text-transform: capitalize;
+  color: #1f373d;
 }
 h6 {
   font-size: 14px;
   font-weight: 400;
   text-transform: capitalize;
+  color: #1f373d;
 }
 p {
   font-size: 13px;
   font-weight: 400;
   line-height: 1.5;
+  color: #1f373d;
 }
 .common_btn {
   font-size: 15px;
@@ -89,6 +95,15 @@ p {
   border: none;
   outline: none;
 }
+/* common_part start */
+.appartment_part,
+.stat_part {
+  padding: 70px 0px;
+}
+.appartment_part {
+  background-color: #f6f5f4;
+}
+/* common_part end */
 /* header_part start */
 .menu_bar {
   padding: 20px 0px;
@@ -117,9 +132,6 @@ p {
 }
 /* header_part end */
 /* banner_part start */
-.banner_part {
-  /* position: relative; */
-}
 .carousel-item img {
   height: 80vh;
 }
@@ -134,7 +146,7 @@ p {
   margin-top: 20px;
 }
 .search_item_box input {
-  padding: 5px 35px;
+  padding: 10px 35px;
   border: none;
   outline: none;
   color: #919eb1;
@@ -148,7 +160,7 @@ p {
   color: #919eb1;
 }
 .search_item_box button {
-  padding: 5px 20px;
+  padding: 10px 30px;
   background-color: #ffcc01;
   border: none;
   margin-left: -15px;
@@ -171,3 +183,92 @@ p {
   margin-right: 10px;
 }
 /* banner_part end */
+/* stat_part start */
+.stat_part h2 {
+  margin-bottom: 20px;
+}
+.stat_part p {
+  margin-top: 50px;
+}
+.stat_part_counter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.flex {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.flex div {
+  width: 190px;
+  height: 165px;
+  padding: 50px 0;
+  margin: 10px;
+  text-align: center;
+  border-radius: 5px;
+  background: #f6f5f4;
+}
+.flex div h3 {
+  color: #ffcc01;
+  font-size: 60px;
+  font-weight: 600;
+}
+/* stat_part end */
+/* appartment_part start */
+
+.appartment_part h2 {
+  margin-bottom: 35px;
+}
+.appartment_item {
+  margin-top: 35px;
+  background-color: #fff;
+  transition: 0.4s all ease;
+}
+.appartment_item_img img {
+  width: 100%;
+}
+.appartment_item_content {
+  padding: 25px 20px;
+}
+.appartment_item_content h5 {
+  margin-bottom: 10px;
+}
+.appartment_item_content span {
+  color: #ffcc01;
+  font-weight: 600;
+}
+.app_right_bottom {
+  display: inline-block;
+  float: right;
+  margin-top: -10px;
+}
+.appartment_item:hover {
+  -webkit-box-shadow: 4px 8px 5px 4px #e9e9e9;
+  box-shadow: 4px 8px 5px 4px #e9e9e9;
+}
+.appartment_part .search_item_box i.fa-solid {
+  left: 20px;
+}
+.appartment_part .search_item_box {
+  margin-top: 40px;
+}
+.appartment_part .view_button {
+  margin-left: 30px;
+  background-color: #fff;
+  border: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+.appartment_part .view_button:hover {
+  background-color: #ffcc01;
+}
+/* appartment_part end */
+/* works_part start */
+.works_part {
+  padding: 70px 0px;
+}
+/* works_part end */
