--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ h5 {
 }
 h6 {
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 600;
   text-transform: capitalize;
   color: #1f373d;
 }
@@ -96,6 +96,7 @@ p {
   outline: none;
 }
 /* common_part start */
+.works_part,
 .appartment_part,
 .stat_part {
   padding: 70px 0px;
@@ -268,7 +269,49 @@ p {
 }
 /* appartment_part end */
 /* works_part start */
-.works_part {
-  padding: 70px 0px;
+.works_part h2 {
+  margin-bottom: 40px;
+}
+.works_part p {
+  line-height: 1.8;
+}
+.work_item {
+  padding: 50px;
+  margin-top: 40px;
+  background-color: #fff;
+  position: relative;
+  overflow: hidden;
+  transition: 0.4s all ease;
+}
+.work_item h2 {
+  position: absolute;
+  top: -60px;
+  left: -22px;
+  font-size: 120px;
+}
+.work_item h4 {
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+.work_item p {
+  line-height: 2;
+  margin-bottom: 20px;
+}
+.work_item h6 {
+  position: relative;
+}
+.work_item h6:after {
+  position: absolute;
+  content: "";
+  bottom: -10px;
+  left: 0;
+  width: 100px;
+  height: 2px;
+  background-color: #fff;
+}
+.works_part .active,
+.work_item:hover {
+  background-color: #ffcc01;
+  color: fff;
 }
 /* works_part end */
