--- a/css/style.css
+++ b/css/style.css
@@ -96,11 +96,16 @@ p {
   outline: none;
 }
 /* common_part start */
+.footer_part,
+.adds_part_content,
+.adds_part,
+.agent_part,
 .works_part,
 .appartment_part,
 .stat_part {
   padding: 70px 0px;
 }
+.agent_part,
 .appartment_part {
   background-color: #f6f5f4;
 }
@@ -269,10 +274,10 @@ p {
 }
 /* appartment_part end */
 /* works_part start */
-.works_part h2 {
-  margin-bottom: 40px;
+.common_heading h2 {
+  margin-bottom: 30px;
 }
-.works_part p {
+.common_heading p {
   line-height: 1.8;
 }
 .work_item {
@@ -288,6 +293,7 @@ p {
   top: -60px;
   left: -22px;
   font-size: 120px;
+  color: #1f373d;
 }
 .work_item h4 {
   margin-top: 60px;
@@ -312,6 +318,136 @@ p {
 .works_part .active,
 .work_item:hover {
   background-color: #ffcc01;
-  color: fff;
+  color: #fff;
 }
 /* works_part end */
+/* service_part start */
+.service_part {
+  padding-bottom: 50px;
+}
+.service_item img {
+  width: 100%;
+  margin-left: -80px;
+}
+.service_item_box {
+  margin-top: 50px;
+}
+.service_item_box:first-child {
+  margin-top: 0px;
+}
+.service_item_box h3 {
+  margin-bottom: 20px;
+}
+.service_item_box p {
+  margin: 20px 0px;
+  line-height: 1.8;
+}
+/* service_part end */
+/* agent_part start */
+.social_link {
+  margin-top: 0px;
+}
+.app_right_bottom i.fa-brands {
+  font-size: 15px;
+  color: #1f373d;
+  margin-left: 15px;
+  transition: 0.4s all ease;
+}
+.app_right_bottom i.fa-brands:hover {
+  color: #ffcc01;
+}
+/* agent_part end */
+/* adds_part start */
+.adds_part_img {
+  position: relative;
+  margin-top: 30px;
+}
+.adds_part_content {
+  margin-top: 30px;
+}
+.adds_part_img img {
+  width: 100%;
+}
+.adds_part_img span {
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #ffcc01;
+  padding: 10px 30px;
+  color: #1f373d;
+  font-weight: 600;
+}
+.adds_part span i.fa-solid {
+  margin-right: 10px;
+  color: #fff;
+  font-size: 18px;
+}
+.adds_part_content h3 {
+  margin-bottom: 35px;
+}
+.adds_part_content p {
+  line-height: 1.8;
+}
+.adds_btn {
+  background-color: #1f373d;
+  color: #fff;
+  margin-top: 30px;
+  font-weight: 600;
+  transition: 0.4s;
+}
+.adds_btn:hover {
+  background-color: #ffcc01;
+}
+/* adds_part end */
+/* footer_part start */
+.footer_part {
+  background-color: #1f373d;
+}
+.footer_part h2 {
+  color: #fff;
+}
+.footer_search {
+  position: relative;
+}
+.footer_search input {
+  width: 100%;
+  padding: 10px 15px;
+  border-radius: 10px;
+  margin-top: 15px;
+}
+.footer_search i.fa-solid {
+  position: absolute;
+  right: 25px;
+  top: 50%;
+  color: #919eb1;
+}
+.footer_part hr {
+  color: #919eb1;
+}
+.footer_bottom {
+  padding-top: 40px;
+}
+.footer_logo h3 {
+  color: #fff;
+  margin-bottom: 30px;
+}
+.footer_logo p {
+  color: #fff;
+  margin-top: 30px;
+  line-height: 1.8;
+}
+.footer_menu h6 {
+  color: #919eb1;
+  margin-bottom: 30px;
+}
+.footer_menu ul li {
+  padding: 11px 0px;
+}
+.footer_menu ul li a {
+  color: #fff;
+}
+.footer_menu ul li:hover a {
+  color: #ffcc01;
+}
+/* footer_part end */
