--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,16 +1,88 @@
 /* extra Small devices (landscape phones, 576px and up) */
 @media (min-width: 320px) and (max-width: 575px) {
-
+  h1 {
+    font-size: 25.64px;
+  }
+  h2 {
+    font-size: 25px;
+  }
+  .navbar-nav {
+    align-items: center;
+  }
+  .menu_btn button:first-child {
+    margin-left: 40px;
+  }
+  .carousel-item img {
+    height: 100vh;
+    width: 100vw;
+  }
+  .search_item_box input {
+    padding: 5px 20px;
+    margin-left: 7px;
+    font-size: 15px;
+  }
+  .search_item_box i.fa-solid {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .search_item_box button {
+    padding: 5px 13px;
+    margin-left: -25px;
+  }
+  .banner_bottom {
+    right: 0;
+    padding: 5px;
+  }
+  .banner_bottom span {
+    font-size: 10px;
+  }
+  .stat_part h2 {
+    margin-bottom: 10px;
+  }
+  .stat_part p {
+    margin-top: 30px;
+  }
+  .appartment_part .search_item_box i.fa-solid {
+    top: 22%;
+    left: 22px;
+  }
+  .appartment_part .view_button {
+    margin-left: 50px;
+    margin-top: 18px;
+  }
+  .appartment_part h2 {
+    margin-bottom: 15px;
+  }
+  .common_heading h2 {
+    margin-bottom: 20px;
+  }
+  .service_item_box h3 {
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+  .footer_part,
+  .adds_part_content,
+  .adds_part,
+  .agent_part,
+  .works_part,
+  .appartment_part,
+  .stat_part {
+    padding: 50px 0px;
+  }
+  .adds_part_content {
+    margin-top: 0px;
+  }
+  .service_item img {
+    margin-left: 0px;
+  }
 }
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767px) {
-
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px) {
-
 }
 
 /* Large devices (desktops, 992px and up) */
