--- a/css/responsive.css
+++ b/css/responsive.css
@@ -82,14 +82,74 @@
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767px) {
+  h1 {
+    font-size: 40.64px;
+  }
+  h2{
+    font-size: 35px;
+  }
+  .navbar-nav {
+    align-items: center;
+  }
+  .menu_btn button:first-child {
+    margin-left: 140px;
+  }
+  .appartment_part h2 {
+    margin-bottom: 25px;
+  }
+  .search_item_box input {
+    padding: 10px 0px;
+    padding-left: 30px;
+  }
+  .search_item_box button {
+    padding: 10px 15px;
+    margin-left: -30px;
+  }
+  .service_item img {
+    margin-left: 0px;
+  }
+  .service_item_box h3 {
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+  .footer_part, .adds_part_content, .adds_part, .agent_part, .works_part, .appartment_part, .stat_part {
+    padding: 50px 0px;
+  }
+  .footer_menu h6 {
+    margin-top: 15px;
+  }
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px) {
+  h1 {
+    font-size: 50.64px;
+  }
+  h2{
+    font-size: 35px;
+  }
+  .flex div{
+    width: 110px;
+    height: 130px;
+  }
+  .flex div h3 {
+    font-size: 35px;
+  }
+  .flex div h4 {
+    font-size: 15px;
+  }
+  .service_item img {
+    width: 100%;
+    margin-left: 0px;
+  }
+  .banner_bottom {
+    right: 0px;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199px) {
+
 }
 
 /* X-Large devices (large desktops, 1200px and up) */
